# timebill

./: .dockerignore  .editorconfig  .gitignore  README.md  index.html  package-lock.json  package.json  plan.md  tailwind.config.js  vite.config.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/web/: vite.config.ts
apps/web/src/: app.css
apps/web/src/lib/: api.ts  confirm.svelte.ts  harvest.ts  pb.ts  realtime.svelte.ts  timer.svelte.ts  workspace.svelte.ts
apps/web/src/routes/: +layout.svelte  +page.svelte
assets/: timebill.pxd
deploy/: Dockerfile  README.md  docker-compose.yml
pocketbase/pb_hooks/: cron.pb.js  email.pb.js  invoice.pb.js  mileage.pb.js  timer.pb.js  workspace.pb.js
pocketbase/pb_migrations/: 1784848793_collections_snapshot.js
scripts/: bump-version.sh  gen-icons.mjs
src/: App.svelte  app.css
src/components/layout/: AppShell.svelte  Drawer.svelte  NavBar.svelte
src/components/logo/: DuckbillLogo.svelte
src/components/reports/: BudgetProgress.svelte  ClientBreakdown.svelte  DailyBarChart.svelte  ExportButton.svelte  InvoiceModal.svelte  ProjectBreakdown.svelte  ReportsScreen.svelte
src/components/settings/: ClientForm.svelte  ClientList.svelte  ProjectForm.svelte  ProjectList.svelte  SettingsPanel.svelte
src/components/timer/: DayTimeline.svelte  NewTimerFAB.svelte  ProjectPicker.svelte  RecentEntryRow.svelte  TimerCard.svelte  TimerList.svelte  TimerScreen.svelte
src/store/: actions.js  derived.js  index.js
src/utils/: colors.js  ids.js  money.js  time.js
(+25 files in other folders)
