[package]
name = "timebill"
version = "1.0.3"
description = "TimeBill desktop app"
authors = ["Ryan Hoshor <ryan@hoshor.me>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "timebill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Cross-platform "how long since the user last touched the input devices?"
# (macOS uses IOKit under the hood). Used by the idle watcher thread.
user-idle = "0.6"

[target."cfg(target_os = \"macos\")".dependencies]
# For NSWindow access — round the actual macOS window via
# contentView.layer.cornerRadius rather than relying on the inner div alone.
objc2 = "0.6"
objc2-app-kit = { version = "0.3" }
